--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,15 +10,71 @@
 }
 .search-btn {
 }
-.gallery {
+/* .gallery {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15px;
+  max-width: 1400px;
   gap: 30px;
   display: flex;
   flex-wrap: wrap;
-}
+} */
 .photo-card {
-  width: 400px;
-  height: 400px;
 }
 .info {
-  width: 400px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.info-item {
+  padding: 10px;
+}
+.stats {
+  display: block;
+}
+.load-more {
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(89, 116, 198);
+  color: #fff;
+  width: 120;
+  height: 40px;
+}
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 240px;
+  grid-gap: 12px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery__item {
+  position: relative;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__image:hover {
+  transform: scale(1.03);
+}
+
+.gallery__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.gallery__link {
+  display: block;
+  text-decoration: none;
+  height: 70%;
+}
+
+.gallery__link:hover {
+  cursor: zoom-in;
 }
