--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,24 +1,28 @@
+body {
+  margin: 0;
+}
 .search-form {
   display: flex;
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: rgb(89, 116, 198);
+  margin-bottom: 10px;
 }
 .input {
+  border: none;
   padding: 5px;
+  border-radius: 2px;
 }
 .search-btn {
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  margin-left: 5px;
+  border: none;
+  border-radius: 5px;
 }
-/* .gallery {
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 15px;
-  max-width: 1400px;
-  gap: 30px;
-  display: flex;
-  flex-wrap: wrap;
-} */
+
 .photo-card {
 }
 .info {
@@ -41,10 +45,12 @@
   color: #fff;
   width: 120;
   height: 40px;
+  border: none;
+  border-radius: 5px;
 }
 .gallery {
   display: grid;
-  max-width: 1140px;
+  max-width: 1400px;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-rows: 340px;
   grid-gap: 12px;
@@ -73,7 +79,7 @@
 .gallery__link {
   display: block;
   text-decoration: none;
-  height: 70%;
+  height: 80%;
 }
 
 .gallery__link:hover {
